--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "@cloudflare/workers-types": "^4.20230404.0",
     "typescript": "^5.0.4",
     "vitest": "^0.30.1",
-    "wrangler": "2.11.1"
+    "wrangler": "^2.11.1"
   },
   "private": true,
   "scripts": {
